# pam-discord

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  install.sh  pam  pyproject.toml
.agents/plugins/: marketplace.json
docs/: how-pam-works.md  index.html  macos-dictation.md  product-design.md  recommended-setup.md
plugins/pam/.codex-plugin/: plugin.json
plugins/pam/skills/link/: SKILL.md
src/pam_discord/: __init__.py  app_server.py  bot.py  cli.py  config.py  service.py  setup.py  shared_cli.py
tests/: test_app_server.py  test_codex_sessions.py  test_service.py  test_setup.py  test_shared_cli.py
